finish the (very much optional) bedrock ore system