@@ -10,6 +10,8 @@ import com.gregtechceu.gtceu.api.data.worldgen.bedrockore.BedrockOreVeinSavedDat
 import com.gregtechceu.gtceu.api.gui.texture.ProspectingTexture;
 import com.gregtechceu.gtceu.api.registry.GTRegistries;
 import com.gregtechceu.gtceu.common.data.GTMaterials;
+import com.gregtechceu.gtceu.config.ConfigHolder;
+import com.gregtechceu.gtceu.utils.GradientUtil;
 import com.lowdragmc.lowdraglib.gui.texture.IGuiTexture;
 import com.lowdragmc.lowdraglib.gui.texture.ItemStackTexture;
 import com.lowdragmc.lowdraglib.side.fluid.FluidHelper;
@@ -27,10 +29,8 @@ import net.minecraft.world.level.material.Fluid;
 import org.apache.commons.lang3.ArrayUtils;
 
 import javax.annotation.Nonnull;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Stream;
 
 /**
  * @author KilaBash
@@ -204,20 +204,20 @@ public abstract class ProspectorMode<T> {
 
     };
 
-    public record OreInfo(Material material, int left, int yield) {
+    public record OreInfo(Material material, int weight, int left, int yield) {
 
     }
 
-    public static ProspectorMode<OreInfo> BEDROCK_ORE = new ProspectorMode<>("metaitem.prospector.mode.bedrock_ore", 3) {
+    public static ProspectorMode<OreInfo> BEDROCK_ORE = new ProspectorMode<>("metaitem.prospector.mode.bedrock_ore", 1) {
         @Override
         public void scan(OreInfo[][][] storage, LevelChunk chunk) {
             if (chunk.getLevel() instanceof ServerLevel serverLevel) {
                 var oreVein = BedrockOreVeinSavedData.getOrCreate(serverLevel).getOreVeinWorldEntry(chunk.getPos().x, chunk.getPos().z);
                 if (oreVein.getDefinition() != null) {
                     var left = 100 * oreVein.getOperationsRemaining() / BedrockOreVeinSavedData.MAXIMUM_VEIN_OPERATIONS;
-                    storage[0][0] = new OreInfo[] {
-                            new OreInfo(oreVein.getDefinition().getBedrockVeinMaterial(), left, oreVein.getOreYield()),
-                    };
+                    for (var entry : oreVein.getDefinition().getBedrockVeinMaterials()) {
+                        storage[0][0] = ArrayUtils.add(storage[0][0], new OreInfo(entry.getValue(), entry.getKey(), left, oreVein.getOreYield()));
+                    }
                 }
             }
         }
@@ -227,9 +227,15 @@ public abstract class ProspectorMode<T> {
             return item.material.getMaterialRGB();
         }
 
+
         @Override
         public IGuiTexture getItemIcon(OreInfo item) {
-            return new ItemStackTexture(ChemicalHelper.get(TagPrefix.dust, item.material));
+            Material material = item.material;
+            ItemStack stack = ChemicalHelper.get(TagPrefix.get(ConfigHolder.INSTANCE.machines.bedrockOreDropTagPrefix), material);
+            if (stack.isEmpty()) stack = ChemicalHelper.get(TagPrefix.crushed, material); // backup 1: crushed; if raw ore doesn't exist
+            if (stack.isEmpty()) stack = ChemicalHelper.get(TagPrefix.gem, material); // backup 2: gem; if crushed ore doesn't exist
+            if (stack.isEmpty()) stack = ChemicalHelper.get(TagPrefix.ore, material); // backup 3: just fallback to normal ore...
+            return new ItemStackTexture(stack).scale(0.8f);
         }
 
         @Override
@@ -245,13 +251,14 @@ public abstract class ProspectorMode<T> {
         @Override
         public void serialize(OreInfo item, FriendlyByteBuf buf) {
             buf.writeUtf(GTRegistries.MATERIALS.getKey(item.material));
+            buf.writeVarInt(item.weight);
             buf.writeVarInt(item.left);
             buf.writeVarInt(item.yield);
         }
 
         @Override
         public OreInfo deserialize(FriendlyByteBuf buf) {
-            return new OreInfo(GTRegistries.MATERIALS.get(buf.readUtf()), buf.readVarInt(), buf.readVarInt());
+            return new OreInfo(GTRegistries.MATERIALS.get(buf.readUtf()), buf.readVarInt(), buf.readVarInt(), buf.readVarInt());
         }
 
         @Override
@@ -261,8 +268,10 @@ public abstract class ProspectorMode<T> {
 
         @Override
         public void appendTooltips(OreInfo[] items, List<Component> tooltips, String selected) {
+            int totalWeight = Arrays.stream(items).mapToInt(OreInfo::weight).sum();
             for (OreInfo item : items) {
-                tooltips.add(Component.translatable(getDescriptionId(item)).append(" --- %s (%s%%)".formatted(item.yield, item.left)));
+                float chance = (float) item.weight / totalWeight * 100;
+                tooltips.add(Component.translatable(getDescriptionId(item)).append(" (").append(Component.translatable("gtceu.gui.content.chance_1", String.format("%.1f", chance) + "%")).append(") --- %s (%s%%)".formatted(item.yield, item.left)));
             }
         }
 
